# cmake-semicolon-example

./: CMakeLists.txt  README.md  main.cpp
